Migrate React to Next

--- a/localisations/songjiang.json
+++ b/localisations/songjiang.json
@@ -14,7 +14,7 @@
             },
             "sc": {
                 "title": "泗泾十锦细锣鼓",
-                "desc": "十锦细锣鼓是上海松江泗泾地区吹打艺人在吸收了昆腔艺术特色的基础上，长期打磨而成的民间音乐，已有近三百年历史。是古上海地区珍贵的民间音乐。\n\n十锦细锣鼓的艺术特色主要是锣鼓。一位演奏者兼带几件乐器，锣鼓点板后，拿起丝竹演奏，交替进行，一专多能。同一锣鼓，由于轻重，点板着落处变化，槌模头可卸可上敲奏，音质效果别具一格。\n\n松江古戏乐，很好地保留了当年的原生态，极具欣赏和研究价值。这些古戏乐中最具特色和代表性的是十锦细锣鼓。\n\n十锦细锣鼓是泗泾地区\"阳春堂\"（1787）吹打班的保留曲目。从1986年发现这一源头以来，在三十多年时间里，对其详细身世一直悬而未决。它所具有的昆曲色彩，很有可能要早于昆曲。从整个音乐来说，显得很完美，很好听，和锣鼓结合得非常巧妙，是一件值得研究的好东西。\n\n过去的松江人没有让老祖宗留下的文化瑰宝湮灭，原汁原味地继承了下来。如今人们将之列入非物质文化遗产保护，十锦细锣鼓将会更加发扬光大，这朵民间艺术之花将更光彩夺目。",
+                "desc": "十锦细锣鼓是上海松江泗泾地区吹打艺人在吸收了昆腔艺术特色的基础上，长期打磨而成的民间音乐，已有近三百年历史。是古上海地区珍贵的民间音乐。\n\n十锦细锣鼓的艺术特色主要是锣鼓。一位演奏者兼带几件乐器，锣鼓点板后，拿起丝竹演奏，交替进行，一专多能。同一锣鼓，由于轻重，点板着落处变化，槌模头可卸可上敲奏，音质效果别具一格。\n\n松江古戏乐，很好地保留了当年的原生态，极具欣赏和研究价值。这些古戏乐中最具特色和代表性的是十锦细锣鼓。\n\n十锦细锣鼓是泗泾地区“阳春堂”（1787）吹打班的保留曲目。从1986年发现这一源头以来，在三十多年时间里，对其详细身世一直悬而未决。它所具有的昆曲色彩，很有可能要早于昆曲。从整个音乐来说，显得很完美，很好听，和锣鼓结合得非常巧妙，是一件值得研究的好东西。\n\n过去的松江人没有让老祖宗留下的文化瑰宝湮灭，原汁原味地继承了下来。如今人们将之列入非物质文化遗产保护，十锦细锣鼓将会更加发扬光大，这朵民间艺术之花将更光彩夺目。",
                 "short_desc": "十锦细锣鼓是上海松江泗泾地区吹打艺人在吸收了昆腔艺术特色的基础上，长期打磨而成的民间音乐，已有近三百年历史。是古上海地区珍贵的民间音乐。"
             },
             "ja": {
@@ -45,8 +45,8 @@
             },
             "sc": {
                 "title": "花篮马灯舞",
-                "desc": "花篮马灯舞原名\"串马灯\"，以马灯和花篮道具命名。一般用于元宵节庆庙会中。主要盛行于松江区新浜镇，历史上曾有\"山歌马灯乡\"之称。\n\n全镇每村都有串马灯。每逢元宵佳节，村村组织灯队，一般第一夜先在庙场齐灯串舞，点灯的火种要从庙里迎请，然后进入本村逐家登门。村民们则家家煮菜备酒，邀集亲友前来观赏和品赏，并备好\"红纸包\"，馈赠灯队。第二夜起按邀发帖子为序，开始去别村相互串舞。每到夜晚，在敲打的锣鼓声中，马、花篮纷纷亮起灯火，村庄灯光闪烁，时隐时现，五光十色，气氛热烈，场面壮观。整个活动要持续到正月底才收灯结束。\n\n花篮马灯舞初期只有四马四花篮。灯队身穿戏装，扮演《水浒》《白蛇传》等剧目中的角色。后经民间艺人不断充实，出现了六马六花篮、八马八花篮等，甚至有两支灯队混合会串的情景。花篮马灯舞一般在晚间出灯，灯队手执花篮、彩马、水担、合钵、药箱、黄绸大伞等道具，点燃小红烛，在民间打击乐\"七字锣\"时急时缓的伴奏中，不断变幻队形节奏，高潮迭起。",
-                "short_desc": "花篮马灯舞原名\"串马灯\"，以马灯和花篮道具命名。一般用于元宵节庆庙会中。主要盛行于松江区新浜镇，历史上曾有\"山歌马灯乡\"之称。"
+                "desc": "花篮马灯舞原名“串马灯”，以马灯和花篮道具命名。一般用于元宵节庆庙会中。主要盛行于松江区新浜镇，历史上曾有“山歌马灯乡”之称。\n\n全镇每村都有串马灯。每逢元宵佳节，村村组织灯队，一般第一夜先在庙场齐灯串舞，点灯的火种要从庙里迎请，然后进入本村逐家登门。村民们则家家煮菜备酒，邀集亲友前来观赏和品赏，并备好“红纸包”，馈赠灯队。第二夜起按邀发帖子为序，开始去别村相互串舞。每到夜晚，在敲打的锣鼓声中，马、花篮纷纷亮起灯火，村庄灯光闪烁，时隐时现，五光十色，气氛热烈，场面壮观。整个活动要持续到正月底才收灯结束。\n\n花篮马灯舞初期只有四马四花篮。灯队身穿戏装，扮演《水浒》《白蛇传》等剧目中的角色。后经民间艺人不断充实，出现了六马六花篮、八马八花篮等，甚至有两支灯队混合会串的情景。花篮马灯舞一般在晚间出灯，灯队手执花篮、彩马、水担、合钵、药箱、黄绸大伞等道具，点燃小红烛，在民间打击乐“七字锣”时急时缓的伴奏中，不断变幻队形节奏，高潮迭起。",
+                "short_desc": "花篮马灯舞原名“串马灯”，以马灯和花篮道具命名。一般用于元宵节庆庙会中。主要盛行于松江区新浜镇，历史上曾有“山歌马灯乡”之称。"
             },
             "ja": {
                 "title": "花籠馬灯舞",
@@ -107,8 +107,8 @@
             },
             "sc": {
                 "title": "新浜山歌",
-                "desc": "松江新浜地区的耘稻山歌源远流长，早在清初，就已初具耘稻山歌的规模，因此历史上新浜被誉为\"田山歌之乡\"。\n\n以前，新浜地区只种一季稻，农务高度集中之际的耘稻，历时最久，花工最大，一季稻耘稻三遍，即\"头通、腰通、三通\"，地主及大户人家田多，往往雇用帮工、短工、长工三十人左右耘稻，这时长工们就自发组织起田山歌班子传唱山歌。\n\n新浜的耘稻山歌均是清一色的男人唱，刚开始由一人或二人以上一起唱，后来发展到多人、甚至十多人一起唱，人人都有角色。为了消除劳动的疲劳，增添乐趣，山歌班主要演唱的是长篇叙事诗吴歌《庄大姐》《姚小二官》《刘二姐》《严六姐》和《王姑娘》等等，山歌种类大体上有\"阳照头\"\"大头歌\"\"落秧歌\"三种。\n\n耘稻山歌演唱内容大多是爱情故事，唱时音调高亢，旋律起伏，常有大跳进行，结束时，一般都有向大跳进行的倾向。演唱节奏皆为散板、自由板，由于在田野里演唱，歌声要嘹亮，高音区活动较多，歌唱者用真假声相结合。\n\n耘稻山歌具有真、新、尖、俗的特性，词句自然贴切、简明易记，曲调优美动人，是当地农人劳动生产、生活的产物，真实地表达了他们的思想、意志、愿望等情感。",
-                "short_desc": "松江新浜地区的耘稻山歌源远流长，早在清初，就已初具耘稻山歌的规模，因此历史上新浜被誉为\"田山歌之乡\"。"
+                "desc": "松江新浜地区的耘稻山歌源远流长，早在清初，就已初具耘稻山歌的规模，因此历史上新浜被誉为“田山歌之乡”。\n\n以前，新浜地区只种一季稻，农务高度集中之际的耘稻，历时最久，花工最大，一季稻耘稻三遍，即“头通、腰通、三通”，地主及大户人家田多，往往雇用帮工、短工、长工三十人左右耘稻，这时长工们就自发组织起田山歌班子传唱山歌。\n\n新浜的耘稻山歌均是清一色的男人唱，刚开始由一人或二人以上一起唱，后来发展到多人、甚至十多人一起唱，人人都有角色。为了消除劳动的疲劳，增添乐趣，山歌班主要演唱的是长篇叙事诗吴歌《庄大姐》《姚小二官》《刘二姐》《严六姐》和《王姑娘》等等，山歌种类大体上有“阳照头”、“大头歌”、“落秧歌”三种。\n\n耘稻山歌演唱内容大多是爱情故事，唱时音调高亢，旋律起伏，常有大跳进行，结束时，一般都有向大跳进行的倾向。演唱节奏皆为散板、自由板，由于在田野里演唱，歌声要嘹亮，高音区活动较多，歌唱者用真假声相结合。\n\n耘稻山歌具有真、新、尖、俗的特性，词句自然贴切、简明易记，曲调优美动人，是当地农人劳动生产、生活的产物，真实地表达了他们的思想、意志、愿望等情感。",
+                "short_desc": "松江新浜地区的耘稻山歌源远流长，早在清初，就已初具耘稻山歌的规模，因此历史上新浜被誉为“田山歌之乡”。"
             },
             "ja": {
                 "title": "新浜山歌",
@@ -169,12 +169,12 @@
             },
             "sc": {
                 "title": "顾绣",
-                "desc": "顾绣由明代松江府进士顾名世家族女性眷族创造、发展和传播,是我国唯一以家族冠名的绣艺流派，至今已历经400多年的跌宕起伏。\n\n因顾名世曾在当时的上海县城内筑园（今九亩地露香园路地区），名为\"露香园\"（今露香园路，即为纪念此园得名），故世称顾家刺绣，也为\"露香园顾绣\"\"顾氏露香园绣\"。\n\n崇祯《松江府志》称：\"顾绣斗方作花鸟，香囊做人物，刻画精巧，为他郡所未有。\"特别是以顾名世次孙媳韩希孟作品为代表的顾绣传世实物，文化艺术内涵颇深，皆是文物珍品，被各大博物馆所收藏。\n\n明末顾氏家道中落，是顾绣脱离士大夫家庭，传入民间的转折点。松郡民间妇女争相传习，顾绣的专称随之成为了江南刺绣的通名，影响遍及苏、宁、杭、湘、蜀，顾名世也因此被江南绣业尊为\"绣祖\"。\n\n顾绣最见精妙之处是以针代笔、以线为墨；以名迹作蓝本、以丝线作丹青。观其作品，山水、人物、花鸟，无不气韵生动，细腻无匹，时人誉为\"画绣\"，以技法精湛、形式典雅、艺术性极高而著称于世，清代四大名绣都曾得益于顾绣。\n\n而顾绣得以巧夺天工的秘技，主要源于绣者深厚的文化艺术涵养和所选刺绣题材的高雅，加之用材精细、针法灵活创新、择日刺绣与锲而不舍的精神，最终成就了画绣合一境界。",
+                "desc": "顾绣由明代松江府进士顾名世家族女性眷族创造、发展和传播,是我国唯一以家族冠名的绣艺流派，至今已历经400多年的跌宕起伏。\n\n因顾名世曾在当时的上海县城内筑园（今九亩地露香园路地区），名为“露香园”（今露香园路，即为纪念此园得名），故世称顾家刺绣，也为“露香园顾绣”、“顾氏露香园绣”。\n\n崇祯《松江府志》称：“顾绣斗方作花鸟，香囊做人物，刻画精巧，为他郡所未有。”特别是以顾名世次孙媳韩希孟作品为代表的顾绣传世实物，文化艺术内涵颇深，皆是文物珍品，被各大博物馆所收藏。\n\n明末顾氏家道中落，是顾绣脱离士大夫家庭，传入民间的转折点。松郡民间妇女争相传习，顾绣的专称随之成为了江南刺绣的通名，影响遍及苏、宁、杭、湘、蜀，顾名世也因此被江南绣业尊为“绣祖”。\n\n顾绣最见精妙之处是以针代笔、以线为墨；以名迹作蓝本、以丝线作丹青。观其作品，山水、人物、花鸟，无不气韵生动，细腻无匹，时人誉为“画绣”，以技法精湛、形式典雅、艺术性极高而著称于世，清代四大名绣都曾得益于顾绣。\n\n而顾绣得以巧夺天工的秘技，主要源于绣者深厚的文化艺术涵养和所选刺绣题材的高雅，加之用材精细、针法灵活创新、择日刺绣与锲而不舍的精神，最终成就了画绣合一境界。",
                 "short_desc": "顾绣由明代松江府进士顾名世家族女性眷族创造、发展和传播,是我国唯一以家族冠名的绣艺流派，至今已历经400多年的跌宕起伏。"
             },
             "ja": {
                 "title": "顧繍",
-                "desc": "顧繍は、明代の松江府出身の進士・顧名世の家族、特にその女性たちによって創作・発展・伝承された刺繍芸術であり、中国において唯一、家名を冠した刺繍流派です。400年以上の長きにわたる歴史の中で、幾多の浮き沈みを経験してきました。\n\n顧名世は当時の上海県城内（現在の九畝地・露香園路付近）に庭園を築き、「露香園（ろこうえん）」と名付けました。この庭園にちなみ、この刺繍は「顧家刺繍」「露香園顧繍」「顧氏露香園繍」などとも呼ばれています。\n\n明代崇禎年間の『松江府志』には、「顧繍は方形の布に花鳥を、香囊には人物を精巧に描く。他の地方には見られない技法である」と記されています。特に、顧名世の孫の嫁・韓希孟による作品は、深い文化的・芸術的価値を有し、現代では貴重な文化財として、各地の博物館に収蔵されています。\n\n明末において顧家が衰退したことを契機に、顧繍は士大夫階層を離れて民間へと広まりました。松江地域の多くの女性たちがこぞってその技術を学び、「顧繍」の名称は江南地方の刺繍を代表する呼称となりました。その影響は、蘇州、南京、杭州、湖南、四川など広範囲に及び、顧名世は「刺繍の祖」として尊敬を集めました。\n\n顧繍の真髄は、「針を筆に、糸を墨に見立てる」技法にあります。歴代の名作を手本とし、絹糸で山水、人物、花鳥を生き生きと描き出します。その作品は極めて精緻でありながら優雅で、「絵画刺繍」と称され、芸術性の高さから世界的に知られています。清代の四大名繍にも多大な影響を与えました。\n\nこのように顧繍が驚異的な完成度を誇るのは、刺繍を担った女性たちの深い文化的素養、洗練された題材の選択、素材の精選、革新的な針法、日を選んでの刺繍と根気強さなどの要素が見事に融合していたからに他なりません。その結果、絵画と刺繍が一体となった芸術世界が実現されたのです。",
+                "desc": "顧繍は、明代の松江府出身の進士・顧名世の家族、特にその女性たちによって創作・発展・伝承された刺繍芸術であり、中国において唯一、家名を冠した刺繍流派です。400年以上の長きにわたる歴史の中で、幾多の浮き沈みを経験してきました。\n\n顧名世は当時の上海県城内（現在の九畝地・露香園路付近）に庭園を築き、「露香園（ろこうえん）」と名付けました。この庭園にちなみ、この刺繍は「顧家刺繍」、「露香園顧繍」、「顧氏露香園繍」などとも呼ばれています。\n\n明代崇禎年間の『松江府志』には、「顧繍は方形の布に花鳥を、香囊には人物を精巧に描く。他の地方には見られない技法である」と記されています。特に、顧名世の孫の嫁・韓希孟による作品は、深い文化的・芸術的価値を有し、現代では貴重な文化財として、各地の博物館に収蔵されています。\n\n明末において顧家が衰退したことを契機に、顧繍は士大夫階層を離れて民間へと広まりました。松江地域の多くの女性たちがこぞってその技術を学び、「顧繍」の名称は江南地方の刺繍を代表する呼称となりました。その影響は、蘇州、南京、杭州、湖南、四川など広範囲に及び、顧名世は「刺繍の祖」として尊敬を集めました。\n\n顧繍の真髄は、「針を筆に、糸を墨に見立てる」技法にあります。歴代の名作を手本とし、絹糸で山水、人物、花鳥を生き生きと描き出します。その作品は極めて精緻でありながら優雅で、「絵画刺繍」と称され、芸術性の高さから世界的に知られています。清代の四大名繍にも多大な影響を与えました。\n\nこのように顧繍が驚異的な完成度を誇るのは、刺繍を担った女性たちの深い文化的素養、洗練された題材の選択、素材の精選、革新的な針法、日を選んでの刺繍と根気強さなどの要素が見事に融合していたからに他なりません。その結果、絵画と刺繍が一体となった芸術世界が実現されたのです。",
                 "short_desc": "顧繍は、明代の松江府出身の進士・顧名世の家族、特にその女性たちによって創作・発展・伝承された刺繍芸術であり、中国において唯一、家名を冠した刺繍流派です。400年以上の長きにわたる歴史の中で、幾多の浮き沈みを経験してきました。"
             },
             "ru": {
@@ -200,8 +200,8 @@
             },
             "sc": {
                 "title": "上海剪纸",
-                "desc": "松江剪纸依据\"三立足\"思想，即立足于民间传统、立足于生活感受，立足于创作，从表现形式上、从意欲表达上、从题材结构上都发生了质的飞跃，由单一的服务于传统节庆而向艺术性的创作蜕变。解放后，在松江民间剪纸老艺人王雨扣、刘之涣、黄渊的带领下，松江剪纸开展了零散性的创作活动，从未间断。时至今日，已连续举办十余届剪纸展，各种题材的作品千幅。2005年，松江区文化馆成立了\"剪纸沙龙\"，共有剪纸爱好者80余人,出版了《松江剪纸集》等书籍。如今王雨扣、田宝琪、钱炳荣、张耀中、陆永清、尤凤、顾培莲等作者，都形成了各自的艺术风格，在创作上追求属于个人的艺术趣味和审美意向。\n\n松江的剪纸一般分成剪、刻两种。剪纸工具主要是剪刀，一般用一把大剪刀，有时则需用大小两把剪刀，借以剪制精细程度不同的图案；刻纸所要的工具有刻刀、刻盘、尺、纸、粉袋等。纸张材质不限，剪纸方法包括折叠制作法、阴线剪法、阳线剪法、阳线与阴线相间的剪法、熏烟剪法、染色剪法、衬托剪法、剪贴剪法等。\n\n松江剪纸作为松江民间艺术形式，其艺术特点也反映了当地的风俗习惯、审美要求、心理素质、表现手法，呈现出独特的总体风格和样式，同时又兼具创作者个人的艺术趣味和审美意向。作品主要以江南百姓生活、民俗民风为题材，讲究造型，强调力度，较为夸张，注重装饰，重在写意；刀法运用上粗细并用，比较完美地体现了创作者的意图和图案所反映的思想内容及美学意识。",
-                "short_desc": "松江剪纸依据\"三立足\"思想，即立足于民间传统、立足于生活感受，立足于创作，从表现形式上、从意欲表达上、从题材结构上都发生了质的飞跃，由单一的服务于传统节庆而向艺术性的创作蜕变。"
+                "desc": "松江剪纸依据“三立足”思想，即立足于民间传统、立足于生活感受，立足于创作，从表现形式上、从意欲表达上、从题材结构上都发生了质的飞跃，由单一的服务于传统节庆而向艺术性的创作蜕变。解放后，在松江民间剪纸老艺人王雨扣、刘之涣、黄渊的带领下，松江剪纸开展了零散性的创作活动，从未间断。时至今日，已连续举办十余届剪纸展，各种题材的作品千幅。2005年，松江区文化馆成立了“剪纸沙龙”，共有剪纸爱好者80余人,出版了《松江剪纸集》等书籍。如今王雨扣、田宝琪、钱炳荣、张耀中、陆永清、尤凤、顾培莲等作者，都形成了各自的艺术风格，在创作上追求属于个人的艺术趣味和审美意向。\n\n松江的剪纸一般分成剪、刻两种。剪纸工具主要是剪刀，一般用一把大剪刀，有时则需用大小两把剪刀，借以剪制精细程度不同的图案；刻纸所要的工具有刻刀、刻盘、尺、纸、粉袋等。纸张材质不限，剪纸方法包括折叠制作法、阴线剪法、阳线剪法、阳线与阴线相间的剪法、熏烟剪法、染色剪法、衬托剪法、剪贴剪法等。\n\n松江剪纸作为松江民间艺术形式，其艺术特点也反映了当地的风俗习惯、审美要求、心理素质、表现手法，呈现出独特的总体风格和样式，同时又兼具创作者个人的艺术趣味和审美意向。作品主要以江南百姓生活、民俗民风为题材，讲究造型，强调力度，较为夸张，注重装饰，重在写意；刀法运用上粗细并用，比较完美地体现了创作者的意图和图案所反映的思想内容及美学意识。",
+                "short_desc": "松江剪纸依据“三立足”思想，即立足于民间传统、立足于生活感受，立足于创作，从表现形式上、从意欲表达上、从题材结构上都发生了质的飞跃，由单一的服务于传统节庆而向艺术性的创作蜕变。"
             },
             "ja": {
                 "title": "松江の切り絵",
@@ -231,8 +231,8 @@
             },
             "sc": {
                 "title": "上海米糕制作技艺",
-                "desc": "叶榭软糕具有松、软、甜、香、肥五大特点，吃起来松软香甜而不膩，加薄荷更是夏日饮食佳品，闻名松、金、青三区。民间有顺口溜曰：\"浦南点心三件宝，亭林馒头张泽饺，叶榭软糕刮刮叫\"。\n\n原料选用当地优质粳米、优质糯米，按比例配制而成。这两种米要在冷水中浸泡7天以上，每天换水，使米发酵成分全部挥发完。经晾透后用石臼舂粉细筛3次，再用筛子筛入蒸格，辅以精细绵白糖和各色馅心，荷叶衬垫，蒸煮而成，口感清香、凉爽。\n\n软糕品种有夹心糕、素糕、猪油豆沙糕。夹心糕以猪油、豆沙、枣仁、红绿瓜丝、绵白糖为馅心，外观呈正方形，色泽鲜艳，特点为松、软、香、甜。素糕系混入上等绵白糖，外观呈大块长方形，雪白细腻，线条清晰，特点为松、软、甜、凉，糯而不粘，盛夏季节一周内不馊变。条形素软糕有羽状刀痕，可随意分开，甜度适中，清香可口，论斤出售，加薄荷更是夏日饮食佳品。",
-                "short_desc": "榭软糕具有松、软、甜、香、肥五大特点，吃起来松软香甜而不膩，加薄荷更是夏日饮食佳品，闻名松、金、青三区。民间有顺口溜曰：\"浦南点心三件宝，亭林馒头张泽饺，叶榭软糕刮刮叫\"。"
+                "desc": "叶榭软糕具有松、软、甜、香、肥五大特点，吃起来松软香甜而不膩，加薄荷更是夏日饮食佳品，闻名松、金、青三区。民间有顺口溜曰：“浦南点心三件宝，亭林馒头张泽饺，叶榭软糕刮刮叫。”\n\n原料选用当地优质粳米、优质糯米，按比例配制而成。这两种米要在冷水中浸泡7天以上，每天换水，使米发酵成分全部挥发完。经晾透后用石臼舂粉细筛3次，再用筛子筛入蒸格，辅以精细绵白糖和各色馅心，荷叶衬垫，蒸煮而成，口感清香、凉爽。\n\n软糕品种有夹心糕、素糕、猪油豆沙糕。夹心糕以猪油、豆沙、枣仁、红绿瓜丝、绵白糖为馅心，外观呈正方形，色泽鲜艳，特点为松、软、香、甜。素糕系混入上等绵白糖，外观呈大块长方形，雪白细腻，线条清晰，特点为松、软、甜、凉，糯而不粘，盛夏季节一周内不馊变。条形素软糕有羽状刀痕，可随意分开，甜度适中，清香可口，论斤出售，加薄荷更是夏日饮食佳品。",
+                "short_desc": "叶榭软糕具有松、软、甜、香、肥五大特点，吃起来松软香甜而不膩，加薄荷更是夏日饮食佳品，闻名松、金、青三区。民间有顺口溜曰：“浦南点心三件宝，亭林馒头张泽饺，叶榭软糕刮刮叫。”"
             },
             "ja": {
                 "title": "葉榭のソフトケーキ",
@@ -262,7 +262,7 @@
             },
             "sc": {
                 "title": "余天成堂传统中药文化",
-                "desc": "余天成堂创始于1782年（清乾隆四十七年），距今已有227年，可以说是上海市地区建成最早的中华老字号药房。创始人余游园是浙江宁波人，早在松江长桥头一家中药店前摆咸菜摊。因他腌的咸菜质优价廉，故生意兴隆，历年他把赚下的银两存放在这家药店里。余天成堂中医药属\"传统医药\"项目，他的特色是名中医和名中成药。经200多年的传承，现余天成堂有14位名中医坐堂，其24字的办店方针始终被经营者所坚持，但驰名的中成药现无资质生产。为造福人类，以申报上海市非物质文化遗产项目为契机，借政策的扶持和政府的支持，找准中医发展的\"发力点\"，不断提高中医医疗技术，形成国内颇具影响力的专科特色，同时开发能治疗现代市民常见疾病的中成药。",
+                "desc": "余天成堂创始于1782年（清乾隆四十七年），距今已有227年，可以说是上海市地区建成最早的中华老字号药房。创始人余游园是浙江宁波人，早在松江长桥头一家中药店前摆咸菜摊。因他腌的咸菜质优价廉，故生意兴隆，历年他把赚下的银两存放在这家药店里。余天成堂中医药属“传统医药”项目，他的特色是名中医和名中成药。经200多年的传承，现余天成堂有14位名中医坐堂，其24字的办店方针始终被经营者所坚持，但驰名的中成药现无资质生产。为造福人类，以申报上海市非物质文化遗产项目为契机，借政策的扶持和政府的支持，找准中医发展的“发力点”，不断提高中医医疗技术，形成国内颇具影响力的专科特色，同时开发能治疗现代市民常见疾病的中成药。",
                 "short_desc": "余天成堂创始于1782年（清乾隆四十七年），距今已有227年，可以说是上海市地区建成最早的中华老字号药房。"
             },
             "ja": {
@@ -293,13 +293,13 @@
             },
             "sc": {
                 "title": "舞草龙",
-                "desc": "龙舞也称\"舞龙\"，民间又叫\"耍龙\"\"耍龙灯\"\"舞龙灯\"，是中国分布最广、影响最为深远的一种民间舞蹈。这种舞蹈具有多样的表现形式，不同民族、不同地域的龙舞风格迥然不同。\n\n松江叶榭地区的舞草龙习俗，相传源于唐代的一场旱灾。传说中\"八仙\"之一的韩湘子是叶榭人，为解家乡旱灾，便召来了东海的\"青龙\"，普降大雨，使得叶榭盐铁塘两岸久旱禾苗喜逢甘霖。叶榭百姓为报韩湘子\"吹箫召龙\"的恩德，便将盐铁塘更名为\"龙泉港\"（唐贞元790）沿用至今。以后每年，乡民们还用金黄色的丰收稻草扎成四丈4节牛头、虎口、鹿角、蛇身、鹰爪、凤尾的草龙，来祈求风调雨顺。从此，制扎草龙，舞草龙成为了叶榭民间的一种习俗。在流传过程中，舞草龙还逐步演变成了各类龙灯舞，而后又相继衍生出了滚灯舞、水族舞等。",
-                "short_desc": "龙舞也称\"舞龙\"，民间又叫\"耍龙\"\"耍龙灯\"\"舞龙灯\"，是中国分布最广、影响最为深远的一种民间舞蹈。这种舞蹈具有多样的表现形式，不同民族、不同地域的龙舞风格迥然不同。"
+                "desc": "龙舞也称“舞龙”，民间又叫“耍龙”、“耍龙灯”、“舞龙灯”，是中国分布最广、影响最为深远的一种民间舞蹈。这种舞蹈具有多样的表现形式，不同民族、不同地域的龙舞风格迥然不同。\n\n松江叶榭地区的舞草龙习俗，相传源于唐代的一场旱灾。传说中“八仙”之一的韩湘子是叶榭人，为解家乡旱灾，便召来了东海的“青龙”，普降大雨，使得叶榭盐铁塘两岸久旱禾苗喜逢甘霖。叶榭百姓为报韩湘子“吹箫召龙”的恩德，便将盐铁塘更名为“龙泉港”（唐贞元790）沿用至今。以后每年，乡民们还用金黄色的丰收稻草扎成四丈4节牛头、虎口、鹿角、蛇身、鹰爪、凤尾的草龙，来祈求风调雨顺。从此，制扎草龙，舞草龙成为了叶榭民间的一种习俗。在流传过程中，舞草龙还逐步演变成了各类龙灯舞，而后又相继衍生出了滚灯舞、水族舞等。",
+                "short_desc": "龙舞也称“舞龙”，民间又叫“耍龙”、“耍龙灯”、“舞龙灯”，是中国分布最广、影响最为深远的一种民间舞蹈。这种舞蹈具有多样的表现形式，不同民族、不同地域的龙舞风格迥然不同。"
             },
             "ja": {
                 "title": "草龍舞",
-                "desc": "龍舞（りゅうまい）は「舞龍」とも呼ばれ、民間では「龍を操る」「龍灯を操る」「龍灯の舞」とも称され、中国で最も広く分布し、最も影響力のある民俗舞踊の一つです。この舞踊は表現形式が多様で、異なる民族や地域ごとに独自のスタイルを持っています。\n\n松江・葉榭（ようしゃ）地域に伝わる「ワラ龍の舞」は、唐代の干ばつに端を発すると言われています。伝説によると、八仙の一人である韓湘子（かんしょうし）は葉榭の出身で、故郷の干ばつを救うために東海から「青龍」を呼び寄せ、大雨をもたらしました。その雨のおかげで、葉榭の塩鉄塘（えんてつとう）沿いの作物が潤い、喜びに包まれました。住民たちはこの恩に感謝し、塩鉄塘を「龍泉港（りゅうせんこう）」と改名し、今でもその名が使われています。その後、住民たちは毎年、黄金色に輝く稲わらで、牛の頭・虎の口・鹿の角・蛇の体・鷲の爪・鳳凰の尾を持つ全長約12メートルの草龍（ワラ龍）を作り、五穀豊穣と風雨順調を祈願するようになりました。こうして、ワラ龍を作り舞う風習は葉榭地域に根付き、伝統として受け継がれています。年月とともにこの風習は龍灯舞へと発展し、さらに「転がし灯舞」や「水族舞」など多様な形態に派生しました。",
-                "short_desc": "龍舞（りゅうまい）は「舞龍」とも呼ばれ、民間では「龍を操る」「龍灯を操る」「龍灯の舞」とも称され、中国で最も広く分布し、最も影響力のある民俗舞踊の一つです。この舞踊は表現形式が多様で、異なる民族や地域ごとに独自のスタイルを持っています。"
+                "desc": "龍舞（りゅうまい）は「舞龍」とも呼ばれ、民間では「龍を操る」、「龍灯を操る」、「龍灯の舞」とも称され、中国で最も広く分布し、最も影響力のある民俗舞踊の一つです。この舞踊は表現形式が多様で、異なる民族や地域ごとに独自のスタイルを持っています。\n\n松江・葉榭（ようしゃ）地域に伝わる「ワラ龍の舞」は、唐代の干ばつに端を発すると言われています。伝説によると、八仙の一人である韓湘子（かんしょうし）は葉榭の出身で、故郷の干ばつを救うために東海から「青龍」を呼び寄せ、大雨をもたらしました。その雨のおかげで、葉榭の塩鉄塘（えんてつとう）沿いの作物が潤い、喜びに包まれました。住民たちはこの恩に感謝し、塩鉄塘を「龍泉港（りゅうせんこう）」と改名し、今でもその名が使われています。その後、住民たちは毎年、黄金色に輝く稲わらで、牛の頭・虎の口・鹿の角・蛇の体・鷲の爪・鳳凰の尾を持つ全長約12メートルの草龍（ワラ龍）を作り、五穀豊穣と風雨順調を祈願するようになりました。こうして、ワラ龍を作り舞う風習は葉榭地域に根付き、伝統として受け継がれています。年月とともにこの風習は龍灯舞へと発展し、さらに「転がし灯舞」や「水族舞」など多様な形態に派生しました。",
+                "short_desc": "龍舞（りゅうまい）は「舞龍」とも呼ばれ、民間では「龍を操る」、「龍灯を操る」、「龍灯の舞」とも称され、中国で最も広く分布し、最も影響力のある民俗舞踊の一つです。この舞踊は表現形式が多様で、異なる民族や地域ごとに独自のスタイルを持っています。"
             },
             "ru": {
                 "title": "Танец травяного дракона",
