Finally achieved SEO friendly

--- a/frontend-next/src/app/locales/articles.json
+++ b/frontend-next/src/app/locales/articles.json
@@ -589,7 +589,7 @@
     },
     
     "article_14806": {
-        "image_url": "https://news.online.sh.cn/news/gb/content/attachement/jpg/site1/20170210/IMG0025116ac73c43670946152.jpg",
+        "image_url": "https://5b0988e595225.cdn.sohucs.com/images/20180924/2a2bd5c7d14442019f2d05597c966865.jpeg",
         "translations": {
             "en": {
                 "title": "Liushen Pills Production Technique",
