--- a/frontend-next/src/app/locales/generic.json
+++ b/frontend-next/src/app/locales/generic.json
@@ -4,7 +4,7 @@
         "about_encyclopedia": "About the Encyclopedia",
         "about_encyclopedia_desc": "The Intangible Cultural Heritage Multilingual Encyclopedia of the Yangtze River Delta is a comprehensive platform dedicated to showcasing and preserving the rich and diverse intangible cultural heritage of the Yangtze River Delta. Spanning traditional crafts, folk customs, opera arts, and more, this platform is committed to safeguarding and passing down these invaluable cultural treasures. By offering content in multiple languages, including Chinese, English, Greek, and Japanese, the encyclopedia serves not only local communities but also a global audience, providing a unique window into China's traditional culture. It fosters cultural exchange and understanding while contributing to the sustainable preservation of intangible cultural heritage.",
         "read_more": "Read More",
-        "back_previous": "Back to Previous Page",
+        "back_list": "Back to List Page",
         "page_1": "Page",
         "page_2": "",
         "previous_page": "Previous",
@@ -47,7 +47,7 @@
         "about_encyclopedia": "Σχετικά με αυτή την εγκυκλοπαίδεια",
         "about_encyclopedia_desc": "Η πολύγλωσση εγκυκλοπαίδεια της άυλης πολιτιστικής κληρονομιάς του Δέλτα Γιανγκτζέ στοχεύει στην ολοκληρωμένη παρουσίαση και διάδοση της πλούσιας και ποικιλόμορφης άυλης πολιτιστικής κληρονομιάς της περιοχής μέσω μιας πολυγλωσσικής πλατφόρμας. Η πλατφόρμα καλύπτει παραδοσιακές τέχνες, λαϊκές δραστηριότητες, όπερα και άλλες πολιτιστικές εκφράσεις, δεσμευόμενη να προστατεύει και να διαφυλάττει αυτούς τους πολύτιμους πολιτιστικούς θησαυρούς. Παρέχοντας περιεχόμενο σε κινεζικά, αγγλικά, ελληνικά, ιαπωνικά και άλλες γλώσσες, η Εγκυκλοπαίδεια Άυλης Πολιτιστικής Κληρονομιάς του Δέλτα του ποταμού Γιανγκτζέ εξυπηρετεί τόσο τους ντόπιους όσο και το διεθνές κοινό, προσφέροντας μια μοναδική ευκαιρία να εξερευνήσουν τον παραδοσιακό κινεζικό πολιτισμό. Ενισχύει τις πολιτιστικές ανταλλαγές, προάγει την κατανόηση και συμβάλλει στη βιώσιμη ανάπτυξη της άυλης πολιτιστικής κληρονομιάς.",
         "read_more": "Περισσότερα",
-        "back_previous": "Επιστροφή στην προηγούμενη σελίδα",
+        "back_list": "Επιστροφή στη σελίδα λίστας",
         "page_1": "Σελίδα",
         "page_2": "",
         "previous_page": "Προηγούμενη",
@@ -90,7 +90,7 @@
         "about_encyclopedia": "关于百科",
         "about_encyclopedia_desc": "长三角地区非遗文化多语种百科旨在通过多语言平台，全面展示和传播长三角地区丰富多彩的非物质文化遗产。该平台涵盖传统手工艺、民俗活动、戏曲艺术等多领域内容，致力于保护和传承这些珍贵的文化瑰宝。通过提供中文、英文、希腊文、日文等多种语言版本，长三角非遗文化百科不仅服务于本地居民，也为全球用户打开了一扇了解中国传统文化的窗口，促进文化交流与理解，并推动非遗文化的可持续发展。",
         "read_more": "阅读更多",
-        "back_previous": "回到前页",
+        "back_list": "回到列表",
         "page_1": "第",
         "page_2": "页",
         "previous_page": "上一页",
@@ -132,7 +132,7 @@
         "about_encyclopedia": "について",
         "about_encyclopedia_desc": "長江デルタ地域無形文化遺産の多言語百科事典は、この地域の豊かで多彩な無形文化遺産を多言語プラットフォームを通じて包括的に紹介し、普及させることを目的としています。このプラットフォームでは、伝統工芸、民俗活動、オペラ芸術などの分野を取り上げ、これらの貴重な文化遺産の保護と継承に努めています。長江デルタ無形文化遺産百科事典は、中国語、英語、ギリシャ語、日本語などで提供されており、地元住民のみならず、世界中のユーザーに向けて中国の伝統文化を理解するための窓口を提供します。これにより、文化交流と相互理解を促進し、文化の持続可能な発展に寄与することを目指しています。",
         "read_more": "もっと見る",
-        "back_previous": "前のページに戻る",
+        "back_list": "リストページに戻る",
         "page_1": "ページ",
         "page_2": "",
         "previous_page": "前のページ",
@@ -175,7 +175,7 @@
         "about_encyclopedia": "Об этой энциклопедии",
         "about_encyclopedia_desc": "Многоязычная энциклопедия нематериального культурного наследия дельты реки Янцзы стремится к всестороннему представлению и распространению богатого и разнообразного нематериального культурного наследия региона через многоязычную платформу. Платформа охватывает традиционные искусства, народные занятия, оперу и другие культурные выражения, стремясь защищать и сохранять эти ценные культурные сокровища. Предоставляя контент на китайском, английском, греческом, японском и других языках, энциклопедия нематериального культурного наследия дельты реки Янцзы обслуживает как местных жителей, так и международную аудиторию, предлагая уникальную возможность исследовать традиционную китайскую культуру. Она усиливает культурные обмены, способствует пониманию и вносит вклад в устойчивое развитие нематериального культурного наследия.",
         "read_more": "Подробнее",
-        "back_previous": "Вернуться на предыдущую страницу",
+        "back_list": "Вернуться на страницу списка",
         "page_1": "Страница",
         "page_2": "",
         "previous_page": "Предыдущая страница",
