Fix dynamic title

--- a/frontend-next/src/app/locales/generic.json
+++ b/frontend-next/src/app/locales/generic.json
@@ -123,8 +123,8 @@
         "play_video": "播放视频",
         "video_desc": "松江乃上海之根，在这里诞生了以松江布为代表的众多非遗文化，\n它们为长三角非遗文化名单增添了浓墨重彩的一笔。",
         "home_desc": "长三角地区非遗文化多语种百科旨在通过多语言平台，全面展示和传播长三角地区丰富多彩的非物质文化遗产。\n您可以通过点击下方的链接开始探索这些珍贵的文化瑰宝！",
-        "default_articles": "国家级长三角\n非物质文化遗产",
-        "special_articles": "上海市松江区\n非物质文化遗产"
+        "default_articles": "国家级长三角非物质文化遗产",
+        "special_articles": "上海市松江区非物质文化遗产"
     },
 
     "ja": {
@@ -166,8 +166,8 @@
         "play_video": "動画を再生",
         "video_desc": "松江は上海の発祥の地であり、松江布をはじめとする多くの無形文化遺産がここで生まれました。\nそれらは長江デルタの文化遺産リストに華やかな彩りを添えています。",
         "home_desc": "長江デルタ無形文化遺産多言語百科事典は、多言語プラットフォームを通じて、この地域の豊かで多様な無形文化遺産を包括的に紹介し、広めることを目的としています。\n下のリンクをクリックして、これらの貴重な文化財を探索しましょう！",
-        "default_articles": "国家級長江デルタ\n無形文化遺産",
-        "special_articles": "上海市松江区の\n無形文化遺産"
+        "default_articles": "国家級長江デルタ無形文化遺産",
+        "special_articles": "上海市松江区の無形文化遺産"
     },
 
     "ru": {
