Regular content & SEO update

--- a/frontend-next/src/app/locales/generic.json
+++ b/frontend-next/src/app/locales/generic.json
@@ -6,7 +6,9 @@
         "read_more": "Read More",
         "back_list": "Back to List Page",
         "page_1": "Page",
-        "page_2": "",
+        "page_2": " ",
+        "total_pages_1": ", Total",
+        "total_pages_2": "Pages",
         "previous_page": "Previous",
         "next_page": "Next",
         "github_url": "GitHub link",
@@ -24,8 +26,6 @@
         "title_example": "For example: Shanghai Proverbs",
         "text_desc": "Article Content (Required)",
         "desc_example": "For example: Shanghai Proverbs are among the most renowned dialect proverbs in China. They are particularly prevalent in the Chenhang area of Shanghai, which has led some to refer to them as \"Chenhang proverbs.\" (...)",
-        "text_short_desc": "Short Description (Optional)",
-        "short_desc_example": "For example: Shanghai Proverbs are among the most renowned dialect proverbs in China. (...)",
         "text_source_url": "Original Chinese Source URL (Optional)",
         "source_url_example": "For example: https://www.ihchina.cn/project_details/12373",
         "text_image_url": "Recommended Image URL (Optional)",
@@ -49,7 +49,9 @@
         "read_more": "Περισσότερα",
         "back_list": "Επιστροφή στη σελίδα λίστας",
         "page_1": "Σελίδα",
-        "page_2": "",
+        "page_2": " ",
+        "total_pages_1": ", Συνολικά",
+        "total_pages_2": "Σελίδες",
         "previous_page": "Προηγούμενη",
         "next_page": "Επόμενη",
         "github_url": "Σύνδεσμος GitHub",
@@ -67,8 +69,6 @@
         "title_example": "Για παράδειγμα: Shanghai Proverbs",
         "text_desc": "Περιεχόμενο άρθρου (Απαιτείται)",
         "desc_example": "Για παράδειγμα: Shanghai Proverbs are among the most renowned dialect proverbs in China. They are particularly prevalent in the Chenhang area of Shanghai, which has led some to refer to them as \"Chenhang proverbs.\" (...)",
-        "text_short_desc": "Σύντομη περιγραφή (Προαιρετικό)",
-        "short_desc_example": "Για παράδειγμα: Shanghai Proverbs are among the most renowned dialect proverbs in China. (...)",
         "text_source_url": "Αρχικό κινεζικό URL πηγής (Προαιρετικό)",
         "source_url_example": "Για παράδειγμα: https://www.ihchina.cn/project_details/12373",
         "text_image_url": "Προτεινόμενο URL εικόνας (Προαιρετικό)",
@@ -92,7 +92,9 @@
         "read_more": "阅读更多",
         "back_list": "回到列表",
         "page_1": "第",
-        "page_2": "页",
+        "page_2": " 页",
+        "total_pages_1": "，共",
+        "total_pages_2": "页",
         "previous_page": "上一页",
         "next_page": "下一页",
         "github_url": "GitHub 链接",
@@ -110,8 +112,6 @@
         "title_example": "例如：Shanghai Proverbs",
         "text_desc": "文章正文（必填）",
         "desc_example": "例如：Shanghai Proverbs are among the most renowned dialect proverbs in China. They are particularly prevalent in the Chenhang area of Shanghai, which has led some to refer to them as \"Chenhang proverbs.\" (...)",
-        "text_short_desc": "文章简短描述（可选）",
-        "short_desc_example": "例如：Shanghai Proverbs are among the most renowned dialect proverbs in China. (...)",
         "text_source_url": "中文原文网址（可选）",
         "source_url_example": "例如：https://www.ihchina.cn/project_details/12373",
         "text_image_url": "推荐图片网址（可选）",
@@ -134,7 +134,9 @@
         "read_more": "もっと見る",
         "back_list": "リストページに戻る",
         "page_1": "ページ",
-        "page_2": "",
+        "page_2": " ",
+        "total_pages_1": "，全",
+        "total_pages_2": "ページ",
         "previous_page": "前のページ",
         "next_page": "次のページ",
         "github_url": "GitHub リンク",
@@ -152,8 +154,6 @@
         "title_example": "例えば：Shanghai Proverbs",
         "text_desc": "記事の本文（必須）",
         "desc_example": "例えば：Shanghai Proverbs are among the most renowned dialect proverbs in China. They are particularly prevalent in the Chenhang area of Shanghai, which has led some to refer to them as \"Chenhang proverbs.\" (...)",
-        "text_short_desc": "記事の簡単な説明（任意）",
-        "short_desc_example": "例えば：Shanghai Proverbs are among the most renowned dialect proverbs in China. (...)",
         "text_source_url": "中国語の原文URL（任意）",
         "source_url_example": "例えば：https://www.ihchina.cn/project_details/12373",
         "text_image_url": "推奨画像のURL（任意）",
@@ -177,7 +177,9 @@
         "read_more": "Подробнее",
         "back_list": "Вернуться на страницу списка",
         "page_1": "Страница",
-        "page_2": "",
+        "page_2": " ",
+        "total_pages_1": ", Всего",
+        "total_pages_2": "Страница",
         "previous_page": "Предыдущая страница",
         "next_page": "Следующая страница",
         "github_url": "Ссылка на GitHub",
@@ -195,8 +197,6 @@
         "title_example": "Например: Shanghai Proverbs",
         "text_desc": "Содержание статьи (Обязательно)",
         "desc_example": "Например: Shanghai Proverbs are among the most renowned dialect proverbs in China. They are particularly prevalent in the Chenhang area of Shanghai, which has led some to refer to them as \"Chenhang proverbs.\" (...)",
-        "text_short_desc": "Краткое описание (необязательно)",
-        "short_desc_example": "Например: Shanghai Proverbs are among the most renowned dialect proverbs in China. (...)",
         "text_source_url": "Оригинальный китайский URL (необязательно)",
         "source_url_example": "Например: https://www.ihchina.cn/project_details/12373",
         "text_image_url": "Рекомендуемый URL изображения (необязательно)",
